[gd_scene load_steps=3 format=3 uid="uid://bdiw610fwdhd1"]

[ext_resource type="Script" path="res://UI/Scripts/PauseController.gd" id="1_ou5wh"]

[sub_resource type="Theme" id="Theme_q3t2k"]
default_font_size = 40

[node name="PauseController" type="Node2D"]
process_mode = 3
script = ExtResource("1_ou5wh")

[node name="PauseMenu" type="ColorRect" parent="."]
z_index = 3
offset_left = 768.0
offset_top = 284.0
offset_right = 1152.0
offset_bottom = 796.0
pivot_offset = Vector2(256, 128)
color = Color(0.2, 0.2, 0.2, 1)

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 504.0
color = Color(0, 0, 0, 1)

[node name="Unpause" type="Button" parent="PauseMenu/ColorRect"]
layout_mode = 0
offset_left = 56.0
offset_top = 132.0
offset_right = 312.0
offset_bottom = 196.0
text = "Unpause"

[node name="QuitToMenu" type="Button" parent="PauseMenu/ColorRect"]
offset_left = 56.0
offset_top = 260.0
offset_right = 312.0
offset_bottom = 324.0
text = "Quit To Main Menu"

[node name="QuitToDesktop" type="Button" parent="PauseMenu/ColorRect"]
offset_left = 56.0
offset_top = 388.0
offset_right = 312.0
offset_bottom = 452.0
text = "Quit To Desktop"

[node name="Label" type="Label" parent="PauseMenu/ColorRect"]
layout_mode = 0
offset_left = 56.0
offset_top = 28.0
offset_right = 312.0
offset_bottom = 92.0
theme = SubResource("Theme_q3t2k")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="PauseMenu/ColorRect/Unpause" to="." method="unpause"]
[connection signal="button_up" from="PauseMenu/ColorRect/QuitToMenu" to="." method="quit_to_menu"]
[connection signal="button_up" from="PauseMenu/ColorRect/QuitToDesktop" to="." method="quit_to_desktop"]
